@@ -15,6 +15,9 @@ Changed
     Re-purpose the cluster page, access it by clicking a cluster on the dashboard
     sidebar (#183)
 
+    Store the user project in the database for each host, it can be over written
+    anytime with a header (#194)
+
 Fixed
     Cant add more than one profile to deploy cloud config (#198)
 
